[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-stigsentry"
version = "0.1.0"
description = "DISA STIG checker + NIST 800-53 RMF mapper + POAM emitter"
license = { text = "LicenseRef-COCL-1.0" }
requires-python = ">=3.10"
authors = [{name="Cognis Digital", email="suite@cognis.digital"}]
readme = "README.md"
keywords = ["military","ic","dod","cognis-digital","stigsentry"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[project.scripts]
stigsentry = "stigsentry.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["stigsentry", "cognis_mil"]
